--- a/service.html
+++ b/service.html
@@ -2,41 +2,57 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FreshStartIO | Professional Home Improvement Services</title>
     <meta
       name="description"
-      content="Fresh Start IO: Your local New Castle County painting company. We offer painting, decking, tile, and drywall services in Wilmington, Newark, Middletown & more!"
+      content="FreshStartIO offers professional home upgrades: interior/exterior painting, deck building, tile, and drywall repair. Elevate your Delaware home with quality craftsmanship. Free estimates!"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Fresh Start IO - New Castle County Painting, Decking, Tile, Drywall
-    </title>
     <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="Images/FreshStart/freshstartio.svg"
-    />
   </head>
   <body>
-    <!-- Business Info Wrapper - Retained from freshstart.html -->
-    <div class="business-info-bar">
-      <div class="business-info">
-        <div class="info-item">
-          <svg
-            class="info-icon"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
-            />
-          </svg>
-          <span>Mon-Fri: 8AM-5PM | Sat: 9AM-2PM</span>
+    <header>
+      <div class="business-info-bar">
+        <div class="business-info">
+          <div class="info-item">
+            <svg
+              class="info-icon"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+              />
+            </svg>
+            <span>Mon-Fri: 8AM-4PM | Sat: 9AM-2PM</span>
+          </div>
+
+          <div class="info-item">
+            <svg
+              class="info-icon"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"
+              />
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"
+              />
+            </svg>
+            <span>New Castle County, DE</span>
+          </div>
         </div>
 
         <div class="info-item">
@@ -50,39 +66,13 @@
               stroke-linecap="round"
               stroke-linejoin="round"
               stroke-width="2"
-              d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"
-            />
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"
+              d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
             />
           </svg>
-          <span>New Castle County, DE</span>
+          <span>302-723-4797 </span>
         </div>
       </div>
-
-      <div class="info-item">
-        <svg
-          class="info-icon"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
-          />
-        </svg>
-        <span>302-723-4797 </span>
-      </div>
-    </div>
-    <!-- Business Info Wrapper -->
-
-    <!-- Navigation - Retained from freshstart.html -->
+    </header>
     <nav>
       <picture>
         <source
@@ -94,7 +84,7 @@
           style="object-fit: cover"
         />
         <img
-          src="/Images/FreshStart/freshstartio.svg"
+          src="FreshStart/freshstartio.svg"
           alt="FreshStart Painting Services"
           loading="lazy"
           width="150px"
@@ -117,153 +107,115 @@
         </li>
         <li class="menu-links"><a href="about-us.html">About Us</a></li>
         <li class="menu-links">
-          <a href="tel:+3027234797" class="cta-link">Free Estimate</a>
+          <a href="tel:+3027234797" class="cta-link" target="_blank">Free Estimate</a>
         </li>
       </ul>
     </nav>
-
-    <main>
-      <section class="about-us-hero">
-        <div class="text-center-wrapper">
-          <h1>The Story Behind FreshStartIO</h1>
-          <p class="white">Transforming Homes, One Brushstroke at a Time</p>
-        </div>
-      </section>
-      <section class="container about-section">
-        <!-- Using 'container' class for consistent layout -->
-        <div class="sidebar-wrapper-center">
-          <div class="content-column">
-            <h2 class="mb-4 prm-color">About Us</h2>
-            <p>
-              Welcome to
-              <a href="/index.html/" class="prm-color">FreshStartIO</a>, a
-              distinguished, locally-owned and operated painting and home
-              improvement firm in New Castle County, Delaware. Our primary
-              objective is to assist both residential and commercial property
-              owners in enhancing the aesthetic appeal, functional utility, and
-              intrinsic value of their assets. We are dedicated specialists in
-              home enhancement, consistently striving for exemplary outcomes.
-            </p>
-            <p>
-              Our experienced and proficient team delivers a comprehensive array
-              of services tailored to diverse client requirements. This offering
-              includes professional interior and exterior painting, expert
-              decking solutions, precise tile installation for kitchens,
-              bathrooms, and flooring, and reliable drywall repair. Each
-              undertaking, regardless of scope, receives our unwavering
-              commitment to diligent execution and precise results, ensuring
-              consistent quality.
-            </p>
-            <p>
-              At <a href="index.html" class="prm-color">FreshStartIO</a> we
-              recognize that home improvement initiatives represent significant
-              investments. Consequently, we prioritize transparent
-              communication, streamlined processes, and individualized client
-              service from consultation through completion. We dedicate ample
-              time to comprehend each client's vision, offering informed
-              recommendations to ensure the final product aligns precisely with
-              expectations and budgetary parameters. Our commitment to superior
-              craftsmanship necessitates premium materials and established
-              methodologies, guaranteeing a durable and aesthetically pleasing
-              finish.
-            </p>
-            <p>
-              As a proud local enterprise, we serve the dynamic communities
-              throughout New Castle County. Our extensive service footprint
-              covers key municipalities and townships where residents and
-              businesses seek trusted home improvement professionals, including:
-            </p>
-            <ul class="flex-list-wrapper">
-              <li>Wilmington</li>
-              <li>Newark</li>
-              <li>Middletown</li>
-              <li>Bear</li>
-              <li>Hockessin</li>
-              <li>Claymont</li>
-              <li>New Castle</li>
-              <li>Townsend</li>
+    <section class="services-hero">
+      <div class="text-center-wrapper">
+        <h2 class="white">Our Professional Services</h2>
+        <p class="white">
+          Quality craftsmanship for every home improvement need
+        </p>
+      </div>
+    </section>
+    <section>
+<section>
+  <div class="container">
+      <h2 class="mb-4  prm-color">Comprehensive Home Improvement Solutions</h2>
+      <p class="text-service">
+        At FreshStartIO, we provide a full range of professional home
+        improvement services to transform your living spaces. Our experienced
+        team delivers exceptional results with attention to detail and quality
+        materials.
+      </p>
+  </div>
+</section>
+    <div class="container">
+      <section class="services-grid">
+        <div class="service-card">
+          <div
+            class="service-img"
+            style="background-image: url('FreshStart/IMG_1345.jpeg')"
+          ></div>
+          <div class="service-content">
+            <h3>Painting Services</h3>
+            <p>Transform your space with our professional painting services:</p>
+            <ul>
+              <li>Interior painting (walls, ceilings, trim)</li>
+              <li>Exterior painting (siding, decks, fences)</li>
+              <li>Cabinet refinishing</li>
+              <li>Color consultation</li>
+              <li>Wallpaper removal</li>
+              <li>Drywall repair</li>
             </ul>
           </div>
-
-          <div class="sidebar-column">
-            <div class="info-sidebar">
-              <!-- Business Hours -->
-              <div class="info-section">
-                <h3 class="section-title">
-                  <span class="icon">🕒</span>
-                  Business Hours
-                </h3>
-                <table class="hours-table">
-                  <tr>
-                    <td>Mon-Fri</td>
-                    <td>8:00 AM - 4:00 PM</td>
-                  </tr>
-                  <tr>
-                    <td>Saturday</td>
-                    <td>9:00AM - 2:00 PM</td>
-                  </tr>
-                  <tr>
-                    <td>Sunday</td>
-                    <td>Closed</td>
-                  </tr>
-                </table>
-              </div>
-
-              <!-- Location -->
-              <div class="info-section">
-                <h3 class="section-title">
-                  <span class="icon">📍</span>
-                  Servicing Areas
-                </h3>
-                <div class="info-item">
-                  <span class="info-value">New Castle County, DE</span>
-                </div>
-                <a
-                  href="https://share.google/UbGMOkv38S3ew08JA"
-                  class="contact-link"
-                  target="_blank"
-                  >Get Directions →</a
-                >
-              </div>
-
-              <!-- Contact -->
-              <div class="info-section">
-                <h3 class="section-title">
-                  <span class="icon">📞</span>
-                  Contact Us
-                </h3>
-                <div class="info-item">
-                  <span class="info-label">Phone:</span>
-                  <a href="tel:+3027234797"
-                    ><span class="info-value">302-723-4797</span></a
-                  >
-                </div>
-                <div class="info-item">
-                  <span class="info-label">Email:</span>
-                  <a
-                    href="mailto:support@freshstartio.com"
-                    class="info-value contact-link"
-                    >support@freshstartio.com</a
-                  >
-                </div>
-              </div>
-            </div>
+        </div>
+        <div class="service-card">
+          <div
+            class="service-img"
+            style="background-image: url('FreshStart/flooring.jpeg')"
+          ></div>
+          <div class="service-content">
+            <h3>Tile Installation</h3>
+            <p>Beautiful and durable tile work for any space:</p>
+            <ul>
+              <li>Kitchen backsplashes</li>
+              <li>Bathroom floors and showers</li>
+              <li>Entryway tile</li>
+              <li>Custom mosaic work</li>
+              <li>Grout repair and sealing</li>
+              <li>Subfloor preparation</li>
+            </ul>
+          </div>
+        </div>
+        <div class="service-card">
+          <div
+            class="service-img"
+            style="background-image: url('FreshStart/greydeck.jpeg')"
+          ></div>
+          <div class="service-content">
+            <h3>Deck Services</h3>
+            <p>Create your perfect outdoor living space:</p>
+            <ul>
+              <li>New deck construction</li>
+              <li>Deck repairs and restoration</li>
+              <li>Staining and sealing</li>
+              <li>Composite decking</li>
+              <li>Railings and safety features</li>
+              <li>Custom pergolas</li>
+            </ul>
+          </div>
+        </div>
+        <div class="service-card">
+          <div
+            class="service-img"
+            style="
+              background-image: url('FreshStart/IMG_0092\ \(1\).jpg');
+            "
+          ></div>
+          <div class="service-content">
+            <h3>Drywall Services</h3>
+            <p>Flawless walls and ceilings:</p>
+            <ul>
+              <li>Drywall installation</li>
+              <li>Taping and mudding</li>
+              <li>Texture matching</li>
+              <li>Water damage repair</li>
+              <li>Popcorn ceiling removal</li>
+              <li>Soundproofing solutions</li>
+            </ul>
           </div>
         </div>
       </section>
-      <section class="cta-section bg-section">
-        <div class="container">
-          <h4>Ready to Transform Your Space?</h4>
-          <p class="mb-6 white">
-            Contact us today for a free estimate on your home improvement
-            project.
-          </p>
-          <a href="tel:+3027234797" class="primary-btn"
-            >Get Your Free Estimate</a
-          >
-        </div>
-      </section>
-    </main>
+    </div>
+    <section class="cta-section grey">
+      <div class="container">
+        <h4>Let’s Make Your Vision a Reality</h4>
+        <p class="mb-6 white">Call Now for a Free Estimate!</p>
+        <a href="tel:+3027234797" class="secondary-btn">Call Now</a>
+      </div>
+    </section>
     <footer id="main-footer">
       <div class="flexbox-container-footer">
         <div class="flexbox-center">
@@ -279,7 +231,7 @@
               />
               <img
                 src="FreshStart/freshstartio.svg"
-                alt="FreshStart Painting Services"
+                alt="FreshStart Logo"
                 loading="lazy"
                 width="180px"
                 height="100px"
@@ -290,10 +242,9 @@
           </div>
         </div>
         <div class="footer-links">
-          <a href="about-us">About Us</a>
+          <a href="about-us.html">About Us</a>
           <a href="service.html">Services</a>
           <a href="tel:+3027234797">Contact</a>
-         
         </div>
         <div class="flexbox-center social-wrapper mg-right-one">
           <a href="https://www.facebook.com/" aria-label="Facebook">
@@ -312,7 +263,7 @@
             target="_blank"
           >
             <img
-              src="instagram-svgrepo-com.svg"
+              src="FreshStart/instagram-svgrepo-com.svg"
               alt="Instagram Logo"
               loading="lazy"
               width="20px"
@@ -322,11 +273,10 @@
           </a>
         </div>
       </div>
-      <!-- Copyright line -->
       <div class="copyright">
         &copy; <span id="year"></span> FreshStart. All rights reserved.
       </div>
     </footer>
-    <script src="index.js"></script>
   </body>
+  <script src="index.js"></script>
 </html>
