--- a/about-us.html
+++ b/about-us.html
@@ -123,14 +123,14 @@
     <main>
       <section class="about-us-hero">
         <div class="text-center-wrapper">
-          <h2>Our Professional Services</h2>
+          <h1 class="white">Our Professional Services</h2>
           <p class="white">Quality craftsmanship for every home improvement need</p>
         </div>
       </section>
       <section class="container about-section">
         <div class="sidebar-wrapper-center">
           <div class="content-column">
-            <h1 class="text-center mb-4 white">About Us</h1>
+            <h2 class="text-center mb-4 prm-color">About Us</h2>
             <p>
               Welcome to <a href="/index.html/">FreshStartI0</a>, a
               distinguished, locally-owned and operated painting and home
