--- a/about-us.html
+++ b/about-us.html
@@ -243,7 +243,7 @@
           </div>
         </div>
       </section>
-      <section class="cta-section">
+      <section class="cta-section bg-section">
         <div class="container">
           <h2>Ready to Transform Your Space?</h2>
           <p class="mb-6">
