--- a/about-us.html
+++ b/about-us.html
@@ -245,8 +245,8 @@
       </section>
       <section class="cta-section bg-section">
         <div class="container">
-          <h2>Ready to Transform Your Space?</h2>
-          <p class="mb-6">
+          <h4>Ready to Transform Your Space?</h4>
+          <p class="mb-6 white">
             Contact us today for a free estimate on your home improvement
             project.
           </p>
