--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="Local painting experts in New Castle County, DE. We offer quality interior & exterior house painting services in cities like Newark, Bear, and Wilmington. Get a free estimate!"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FreshStartIo</title>
+    <title>FreshStartIO | Painting experts in New Castle County</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="icon"
@@ -74,7 +74,7 @@
             d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
           />
         </svg>
-        <span>302-723-4797 </span>
+        <a href="tel:+3027234797"> <span class="white">302-723-4797</span> </a>
       </div>
     </div>
   </header>
@@ -175,9 +175,7 @@
                     cracks, and water damage before painting
                   </li>
                 </ul>
-                <a href="service.html"
-                  >Learn More About Interior Services →</a
-                >
+                <a href="service.html">Learn More About Interior Services →</a>
               </div>
             </div>
             <div class="item-card">
@@ -227,7 +225,7 @@
       <section id="image-libary" class="bg-light-section">
         <div class="img-wrapper flex-wrapper-center">
           <div class="image-libary-text">
-            <h3 class="mb-4 prm-color text-large text-center">
+            <h3 class="mb-4 text-large text-center">
               From Concept to Color: Our Gallery
             </h3>
             <p class="faq-text">
@@ -325,11 +323,11 @@
               />
             </div>
             <div class="content-box">
-              <h3 class="mb-4 text-large prm-color">
+              <h3 class="mb-4 text-large second-color">
                 Why Choose Fresh Start IO?
               </h3>
               <div class="flexbox-start">
-                <h4 class="content-header prm-color">
+                <h4 class="content-header second-color">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 24 24"
@@ -378,7 +376,7 @@
                 </li>
               </ul>
               <div class="flexbox-start">
-                <h4 class="content-header prm-color">
+                <h4 class="content-header second-color">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 24 24"
@@ -415,7 +413,7 @@
                 </li>
               </ul>
               <div class="flexbox-start">
-                <h4 class="content-header prm-color">
+                <h4 class="content-header second-color">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="24"
@@ -549,7 +547,7 @@
                     href="https://www.behr.com/consumer"
                     target="_blank"
                     rel="noopener noreferrer"
-                    class="prm-color"
+                    class="second-color"
                     >Behr</a
                   >
                 </p>
@@ -588,7 +586,7 @@
       <div class="footer-links">
         <a href="about-us.html">About Us</a>
         <a href="service.html">Services</a>
-        <a href="href="tel:+3027234797"">Contact</a>
+        <a href="about-us.html">Contact</a>
       </div>
       <div class="flexbox-center social-wrapper mg-right-one">
         <a href="https://www.facebook.com/" aria-label="Facebook">
@@ -623,4 +621,5 @@
   </footer>
   <script src="index.js"></script>
 </html>
+
 
