--- a/about-us.html
+++ b/about-us.html
@@ -15,11 +15,10 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="FreshStart/freshstartio.svg"
+      href="Images/FreshStart/freshstartio.svg"
     />
   </head>
   <body>
-    <!-- Business Info Wrapper - Retained from freshstart.html -->
     <div class="business-info-bar">
       <div class="business-info">
         <div class="info-item">
@@ -108,14 +107,13 @@
         &#9776;
       </button>
       <ul class="nav-links">
-        <li class="menu-links"><a href="index.html">Home</a>
-        </li>
+        <li class="menu-links"><a href="index.html">Home</a></li>
         <li class="menu-links">
           <a href="service.html">Services</a>
         </li>
         <li class="menu-links"><a href="about-us.html">About Us</a></li>
         <li class="menu-links">
-          <a href="tel:3027234797" class="cta-link">Free Estimate</a>
+          <a href="tel:+3027234797" class="cta-link">Free Estimate</a>
         </li>
       </ul>
     </nav>
@@ -123,16 +121,18 @@
     <main>
       <section class="about-us-hero">
         <div class="text-center-wrapper">
-          <h1 class="white">Our Professional Services</h2>
-          <p class="white">Quality craftsmanship for every home improvement need</p>
+          <h1>The Story Behind FreshStartIO</h1>
+          <p class="white">Transforming Homes, One Brushstroke at a Time</p>
         </div>
       </section>
       <section class="container about-section">
+        <!-- Using 'container' class for consistent layout -->
         <div class="sidebar-wrapper-center">
           <div class="content-column">
-            <h2 class="text-center mb-4 prm-color">About Us</h2>
+            <h2 class="mb-4 second-color">About Us</h2>
             <p>
-              Welcome to <a href="/index.html/">FreshStartI0</a>, a
+              Welcome to
+              <a href="index.html" class="second-color">FreshStartIO</a>, a
               distinguished, locally-owned and operated painting and home
               improvement firm in New Castle County, Delaware. Our primary
               objective is to assist both residential and commercial property
@@ -151,16 +151,17 @@
               consistent quality.
             </p>
             <p>
-              At <a href="/index.html/">FreshStartIO</a> we recognize that
-              home improvement initiatives represent significant investments.
-              Consequently, we prioritize transparent communication, streamlined
-              processes, and individualized client service from consultation
-              through completion. We dedicate ample time to comprehend each
-              client's vision, offering informed recommendations to ensure the
-              final product aligns precisely with expectations and budgetary
-              parameters. Our commitment to superior craftsmanship necessitates
-              premium materials and established methodologies, guaranteeing a
-              durable and aesthetically pleasing finish.
+              At <a href="index.html" class="second-color">FreshStartIO</a> we
+              recognize that home improvement initiatives represent significant
+              investments. Consequently, we prioritize transparent
+              communication, streamlined processes, and individualized client
+              service from consultation through completion. We dedicate ample
+              time to comprehend each client's vision, offering informed
+              recommendations to ensure the final product aligns precisely with
+              expectations and budgetary parameters. Our commitment to superior
+              craftsmanship necessitates premium materials and established
+              methodologies, guaranteeing a durable and aesthetically pleasing
+              finish.
             </p>
             <p>
               As a proud local enterprise, we serve the dynamic communities
@@ -179,10 +180,8 @@
               <li>Townsend</li>
             </ul>
           </div>
-
           <div class="sidebar-column">
             <div class="info-sidebar">
-              <!-- Business Hours -->
               <div class="info-section">
                 <h3 class="section-title">
                   <span class="icon">🕒</span>
@@ -213,7 +212,10 @@
                 <div class="info-item">
                   <span class="info-value">New Castle County, DE</span>
                 </div>
-                <a href="https://maps.google.com" class="contact-link" target="_blank"
+                <a
+                  href="https://share.google/UbGMOkv38S3ew08JA"
+                  class="contact-link"
+                  target="_blank"
                   >Get Directions →</a
                 >
               </div>
@@ -250,7 +252,9 @@
             Contact us today for a free estimate on your home improvement
             project.
           </p>
-          <a href="about-us.html" class="primary-btn">Get Your Free Estimate</a>
+          <a href="tel:+3027234797" class="primary-btn"
+            >Get Your Free Estimate</a
+          >
         </div>
       </section>
     </main>
@@ -298,7 +302,7 @@
             />
           </a>
           <a
-            href="https://www.instagram.com/"
+            href="https://www.instagram.com/freshstartio/"
             aria-label="Instagram"
             target="_blank"
           >
@@ -313,7 +317,6 @@
           </a>
         </div>
       </div>
-      <!-- Copyright line -->
       <div class="copyright">
         &copy; <span id="year"></span> FreshStart. All rights reserved.
       </div>
