--- a/service.html
+++ b/service.html
@@ -69,7 +69,7 @@
               d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
             />
           </svg>
-          <span>302-723-4797 </span>
+        <a href="tel+3027234797"> <span class="white">302-723-4797</span></a>
         </div>
       </div>
     </header>
@@ -107,7 +107,7 @@
         </li>
         <li class="menu-links"><a href="about-us.html">About Us</a></li>
         <li class="menu-links">
-          <a href="tel:+3027234797" class="cta-link" target="_blank">Free Estimate</a>
+          <a href="tel+3027234797" class="cta-link" target="_blank">Free Estimate</a>
         </li>
       </ul>
     </nav>
@@ -122,7 +122,7 @@
     <section>
 <section>
   <div class="container">
-      <h2 class="mb-4  prm-color">Comprehensive Home Improvement Solutions</h2>
+      <h2 class="mb-4  second-color">Comprehensive Home Improvement Solutions</h2>
       <p class="text-service">
         At FreshStartIO, we provide a full range of professional home
         improvement services to transform your living spaces. Our experienced
@@ -231,7 +231,7 @@
               />
               <img
                 src="FreshStart/freshstartio.svg"
-                alt="FreshStart Logo"
+                alt="Roadside Assistance Services"
                 loading="lazy"
                 width="180px"
                 height="100px"
@@ -244,7 +244,7 @@
         <div class="footer-links">
           <a href="about-us.html">About Us</a>
           <a href="service.html">Services</a>
-          <a href="tel:+3027234797">Contact</a>
+          <a href="about-us.html">Contact</a>
         </div>
         <div class="flexbox-center social-wrapper mg-right-one">
           <a href="https://www.facebook.com/" aria-label="Facebook">
@@ -280,3 +280,4 @@
   </body>
   <script src="index.js"></script>
 </html>
+
