--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <li class="menu-links"><a href="service.html">Services</a></li>
       <li class="menu-links"><a href="about-us.html">About Us</a></li>
       <li class="menu-links">
-        <a href="tel:+3027234797" class="cta-link">Free Estimate</a>
+        <a href="tel:+13027234797"> class="cta-link">Free Estimate</a>
       </li>
     </ul>
   </nav>
@@ -124,7 +124,7 @@
               and Bear - no corners cut. Free estimates!
             </p>
             <div class="btn-wrapper">
-              <a href="tel:+3027234797" class="primary-btn">Free Estimate</a>
+              <a href="tel:+13027234797"> class="primary-btn">Free Estimate</a>
             </div>
           </div>
         </div>
@@ -216,7 +216,7 @@
             </div>
           </div>
           <div class="btn-wrapper flex-center">
-            <a href="tel:+3027234797" class="primary-btn"
+            <a href="tel:+13027234797"> class="primary-btn"
               >Unlock Your Home's New Look</a
             >
           </div>
