--- a/about-us.html
+++ b/about-us.html
@@ -76,7 +76,7 @@
             d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
           />
         </svg>
-        <a href="tel+3027234797"> <span class="white">302-723-4797</span></a>
+        <a href="tel:+13027234797"> <span class="white">302-723-4797</span></a>
       </div>
     </div>
     <nav>
@@ -113,7 +113,7 @@
         </li>
         <li class="menu-links"><a href="about-us.html">About Us</a></li>
         <li class="menu-links">
-          <a href="tel:+3027234797" class="cta-link">Free Estimate</a>
+          <a href="tel:+13027234797" class="cta-link">Free Estimate</a>
         </li>
       </ul>
     </nav>
@@ -228,7 +228,7 @@
                 </h3>
                 <div class="info-item">
                   <span class="info-label">Phone:</span>
-                  <a href="tel:+3027234797"
+                  <a href="tel:+13027234797"
                     ><span class="info-value">302-723-4797</span></a
                   >
                 </div>
@@ -252,7 +252,7 @@
             Contact us today for a free estimate on your home improvement
             project.
           </p>
-          <a href="tel:+3027234797" class="primary-btn"
+          <a href="tel:+13027234797" class="primary-btn"
             >Get Your Free Estimate</a
           >
         </div>
