--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               and Bear - no corners cut. Free estimates!
             </p>
             <div class="btn-wrapper">
-              <a href="tel:+13027234797"> class="primary-btn">Free Estimate</a>
+              <a href="tel:+13027234797" class="primary-btn">Free Estimate</a>
             </div>
           </div>
         </div>
