--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             </div>
           </div>
           <div class="btn-wrapper flex-center">
-            <a href="tel:+13027234797"> class="primary-btn"
+            <a href="tel:+13027234797" class="primary-btn"
               >Unlock Your Home's New Look</a
             >
           </div>
