--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <li class="menu-links"><a href="service.html">Services</a></li>
       <li class="menu-links"><a href="about-us.html">About Us</a></li>
       <li class="menu-links">
-        <a href="tel:+13027234797"> class="cta-link">Free Estimate</a>
+        <a href="tel:+13027234797" class="cta-link">Free Estimate</a>
       </li>
     </ul>
   </nav>
