--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="hero-container">
           <div>
             <h1 class="hero-title white">
-              Quality Painting in Delaware That Fits Your Budget
+              Expert House Painter in Delaware: Affordable Excellence for Your Home
             </h1>
             <p>
               Need a quick refresh? Our team delivers streak-free interior
