--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Local painting experts in New Castle County, DE. We offer quality interior & exterior house painting services in cities like Newark, Bear, and Wilmington. Get a free estimate!"
+      content="Expert house painting in Delaware! Affordable interior & exterior services in Wilmington, Newark & Bear. Get a free estimate today!"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FreshStartIO | Painting experts in New Castle County</title>
+    <title>FreshStartIO | House Painting experts in New Castle County</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="icon"
@@ -119,9 +119,7 @@
               Expert House Painter in Delaware: Affordable Excellence for Your Home
             </h1>
             <p>
-              Need a quick refresh? Our team delivers streak-free interior
-              painting and weatherproof exterior coatings in Wilmington, Newark,
-              and Bear - no corners cut. Free estimates!
+            Looking for an expert house painter in Delaware? Our team delivers affordable excellence for your home, specializing in both interior and exterior painting across Wilmington, Newark, and Bear. Get a free estimate today and experience the difference quality makes!
             </p>
             <div class="btn-wrapper">
               <a href="tel:+13027234797" class="primary-btn">Free Estimate</a>
