--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="hero-container">
           <div>
             <h1 class="hero-title white">
-              Expert House Painter in Delaware <br> Affordable Excellence for Your Home
+              Expert House Painter in Delaware Affordable Excellence for Your Home
             </h1>
             <p>
             Looking for an expert house painter in Delaware? Our team delivers affordable excellence for your home, specializing in both interior and exterior painting across Wilmington, Newark, and Bear. Get a free estimate today and experience the difference quality makes!
