--- a/index.html
+++ b/index.html
@@ -131,12 +131,10 @@
   <div class="hero-container">
     <div>
       <h1 class="hero-title white">
-        Quality Painting in Delaware That Fits Your Budget
+       Expert House Painter in Delaware: Affordable Excellence for Your Home
       </h1>
       <p>
-        Need a quick refresh? Our team delivers streak-free interior
-        painting and weatherproof exterior coatings in Wilmington, Newark,
-        and Bear - no corners cut. Free estimates!
+     Looking for an expert house painter in Delaware? Our team delivers affordable excellence for your home, specializing in both interior and exterior painting across Wilmington, Newark, and Bear. Get a free estimate today and experience the difference quality makes!
       </p>
       <div class="btn-wrapper">
         <a href="tel:+3027234797" class="primary-btn">Free Estimate</a>
