--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
        Expert House Painter in Delaware Affordable Excellence for Your Home
       </h1>
       <p>
-     Looking for an expert house painter in Delaware? Our team delivers affordable excellence for your home, specializing in both interior and exterior painting across Wilmington, Newark, and Bear. Get a free estimate today and experience the difference quality makes!
+     Looking for an expert house painter in Delaware? Our team delivers affordable excellence for your home, specializing in both interior and exterior painting across New Castle County. Get a free estimate today and experience the difference quality makes!
       </p>
       <div class="btn-wrapper">
         <a href="tel:+3027234797" class="primary-btn">Free Estimate</a>
